--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -55,9 +55,9 @@
 </head>
 <body>
   <!-- 背景 -->
-  <div id="bg-sunrise" class="bg" style="background-image:url('public/items/sunrise.jpg')"></div>
-  <div id="bg-beach"   class="bg hide" style="background-image:url('public/items/beach_day.jpg')"></div>
-  <div id="bg-night"   class="bg hide" style="background-image:url('public/items/night_beach.jpg')"></div>
+  <div id="bg-sunrise" class="bg" style="background-image:url('public/bg/sunrise.jpg')"></div>
+  <div id="bg-beach"   class="bg hide" style="background-image:url('public/bg/beach_day.jpg')"></div>
+  <div id="bg-night"   class="bg hide" style="background-image:url('public/bg/night_beach.jpg')"></div>
 
   <!-- WHOAIキャラ -->
   <img id="whoai" class="whoai" src="assets/stage1/green_open.png" alt="whoai">
@@ -114,9 +114,9 @@
     // WHOAIキャラ
     const WHOAI_DIR="assets/stage1/";
     const WHOAI_LIST=[
-      "public/asset/steag1/blue_closed.png","public/asset/steag1/green_open.png","orange_closed.png",
-      "public/asset/steag1/pink_closed.png","public/asset/steag1/purple_closed.png",
-      "public/asset/steag1/tane_green.png","public/asset/steag1/tane_pink.png","public/asset/steag1/tane_purple.png","public/asset/steag1/tane_blue.png"
+      "blue_closed.png","green_open.png","orange_closed.png",
+      "pink_closed.png","purple_closed.png",
+      "tane_green.png","tane_pink.png","tane_purple.png","tane_blue.png"
     ].map(n=>WHOAI_DIR+n);
 
     // 貝
