--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -55,9 +55,9 @@
 </head>
 <body>
   <!-- 背景 -->
-  <div id="bg-sunrise" class="bg" style="background-image:url('public/bg/sunrise.jpg')"></div>
-  <div id="bg-beach"   class="bg hide" style="background-image:url('public/bg/beach_day.jpg')"></div>
-  <div id="bg-night"   class="bg hide" style="background-image:url('public/bg/night_beach.jpg')"></div>
+  <div id="bg-sunrise" class="bg" style="background-image:url('public/items/sunrise.jpg')"></div>
+  <div id="bg-beach"   class="bg hide" style="background-image:url('public/items/beach_day.jpg')"></div>
+  <div id="bg-night"   class="bg hide" style="background-image:url('public/items/night_beach.jpg')"></div>
 
   <!-- WHOAIキャラ -->
   <img id="whoai" class="whoai" src="assets/stage1/green_open.png" alt="whoai">
