--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -48,7 +48,7 @@
   <img id="whoai" class="whoai" src="public/assets/stage1/green_open.png" alt="whoai">
 
   <!-- バケツ -->
-  <div class="bucket"><img src="public/bucket.png" alt="bucket"></div>
+  <div class="bucket"><img src="public/bucket.png.png" alt="bucket"></div>
 
   <!-- UI -->
   <div id="toast"></div>
