--- a/whoai_gem.html
+++ b/whoai_gem.html
@@ -1,235 +1,198 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title data-i18n="title">WHOAI Gem</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  :root{--ui-radius:12px}
-  html,body{margin:0;height:100%;background:#000;color:#fff;font-family:system-ui,-apple-system,Segoe UI,Roboto,'Hiragino Sans','Noto Sans JP',sans-serif;overflow:hidden}
+  html,body{margin:0;padding:0;height:100%;background:#000;color:#fff;overflow:hidden;font-family:sans-serif}
 
-  /* 背景3枚＋フェード */
-  .bg{position:absolute;inset:0;background-size:cover;background-position:center;transition:opacity .8s ease;opacity:0;z-index:0}
+  /* 背景 */
+  .bg{position:absolute;inset:0;background-size:cover;background-position:center;opacity:0;transition:opacity .8s;z-index:0}
   .bg.show{opacity:1}
-
-  /* フォールバック用のグラデ */
   .grad-sunrise{background:linear-gradient(#ffdfb5,#f7a7b1 40%,#8fb7ff)}
   .grad-beach{background:linear-gradient(#b6e3ff,#9ad0ff 60%,#f2d7a2)}
   .grad-night{background:radial-gradient(circle at 50% 20%,#1b2b52,#0a1430 70%)}
 
-  /* 月（夜のみ） */
-  .moon{position:absolute;top:8vh;left:50%;transform:translateX(-50%);width:min(14vw,180px);height:min(14vw,180px);border-radius:50%;
-        background:radial-gradient(circle at 35% 35%,rgba(255,255,255,.95),rgba(255,255,255,.7) 45%,rgba(255,255,255,0) 60%);
-        filter:drop-shadow(0 0 10px rgba(255,255,255,.25));opacity:0;transition:opacity .8s;z-index:1;pointer-events:none}
-  .night-on .moon{opacity:.9}
-
-  /* WHOAI・バケツ・UI */
-  .whoai{position:absolute;bottom:12vh;left:5vw;width:clamp(80px,12vw,140px);animation:hop 2s infinite;z-index:4}
+  /* WHOAIキャラ */
+  .whoai{position:absolute;bottom:12vh;left:5vw;width:clamp(80px,12vw,140px);
+         animation:hop 2s infinite;z-index:4}
   @keyframes hop{0%,100%{transform:translateY(0)}50%{transform:translateY(-15px)}}
+
+  /* バケツ */
   .bucket{position:absolute;right:2vw;bottom:8vh;width:clamp(72px,14vw,160px);z-index:4}
   .bucket img{width:100%;height:auto;display:block}
 
-  #counter{position:absolute;right:calc(2vw + 6px);bottom:calc(8vh + 12px);font-size:clamp(14px,1.8vw,20px);
-           background:#fff;color:#111;padding:4px 8px;border-radius:999px;z-index:5}
-  #toast{position:absolute;top:10px;left:10px;background:rgba(0,0,0,.6);padding:6px 12px;border-radius:8px;z-index:11}
+  /* UI */
+  #counter{position:absolute;right:calc(2vw + 6px);bottom:calc(8vh + 12px);
+           font-size:clamp(14px,1.8vw,20px);background:#fff;color:#111;
+           padding:4px 8px;border-radius:999px;z-index:5}
+  #toast{position:absolute;top:10px;left:10px;background:rgba(0,0,0,0.6);
+         padding:6px 12px;border-radius:8px;z-index:11}
   #langSel{position:absolute;top:10px;right:10px;z-index:11}
+  .ui{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);
+      display:flex;gap:6px;z-index:10}
+  .ui button{padding:6px 12px;border:none;border-radius:8px;cursor:pointer}
 
-  .ui{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);display:flex;gap:6px;z-index:10}
-  .ui button{padding:6px 12px;border:none;border-radius:var(--ui-radius);cursor:pointer}
-
-  /* 砂レイヤー（Canvas）＋出現する貝 */
+  /* 砂レイヤーと貝 */
   #sandLayer{position:absolute;inset:0;touch-action:none;z-index:2}
-  .shell{position:absolute;width:clamp(48px,6vw,72px);height:auto;transform:translate(-50%,-50%) scale(.6);
-         transition:transform .25s ease,opacity .25s ease;opacity:0;cursor:grab;z-index:3}
+  .shell{position:absolute;width:clamp(48px,6vw,72px);height:auto;
+         transform:translate(-50%,-50%) scale(.6);
+         transition:transform .25s ease,opacity .25s ease;
+         opacity:0;cursor:grab;z-index:3}
   .shell.show{transform:translate(-50%,-50%) scale(1);opacity:1}
   .dragging{opacity:.85;cursor:grabbing}
 </style>
 </head>
 <body>
-  <!-- 背景（中身は後でJSが設定） -->
+  <!-- 背景（画像が無くてもグラデで代替） -->
   <div id="bg-sunrise" class="bg grad-sunrise"></div>
   <div id="bg-beach"   class="bg grad-beach"></div>
   <div id="bg-night"   class="bg grad-night"></div>
-  <div id="moon" class="moon"></div>
 
-  <!-- キャラ＆バケツ -->
+  <!-- WHOAIキャラ -->
   <img id="whoai" class="whoai" src="assets/stage1/green_open.png" alt="whoai">
+
+  <!-- バケツ -->
   <div class="bucket" id="bucket"><img src="public/bucket.png" alt="bucket"></div>
   <div id="counter">0</div>
 
   <!-- UI -->
   <div id="toast"></div>
   <div class="ui">
-    <button id="btnStart" data-i18n="btn.start">はじめる</button>
-    <button id="btnCook"  data-i18n="btn.cook">料理</button>
-    <button id="btnAcc"   data-i18n="btn.acc">アクセサリー</button>
-    <button id="btnCol"   data-i18n="btn.col">コレクション</button>
-    <button id="btnNight" data-i18n="btn.night">夜へ</button>
+    <button id="btnStart">はじめる</button>
+    <button id="btnNight">夜へ</button>
   </div>
-  <select id="langSel" aria-label="language">
-    <option value="ja">日本語</option><option value="en">English</option>
-    <option value="ko">한국어</option><option value="zh">中文</option>
-  </select>
+  <select id="langSel"><option value="ja">日本語</option><option value="en">English</option></select>
 
   <!-- 砂レイヤー -->
   <canvas id="sandLayer" class="hide"></canvas>
 
-  <script>
-  /* ========== i18n（失敗時は簡易JP辞書） ========== */
-  const I18N={dict:{},cur:'ja'};
-  const FALLBACK_JA={
-    "title":"WHOAI Gem",
-    "toast.sunrise":"おはよう。朝日がきれいだね",
-    "toast.beach":"砂をやさしくなでてみよう",
-    "toast.night":"今日はここまでにしようか",
-    "btn.start":"はじめる","btn.cook":"料理","btn.acc":"アクセサリー","btn.col":"コレクション","btn.night":"夜へ"
-  };
-  async function setLang(lang){
-    I18N.cur=(lang||navigator.language||'ja').slice(0,2);
-    if(!['ja','en','ko','zh'].includes(I18N.cur)) I18N.cur='ja';
-    try{
-      const res=await fetch(`i18n/${I18N.cur}.json`,{cache:'no-cache'});
-      if(!res.ok) throw new Error('i18n missing');
-      I18N.dict=await res.json();
-    }catch(e){
-      I18N.dict=FALLBACK_JA;
+<script>
+/* ========== 背景制御 ========== */
+const bgEl={
+  sunrise:document.getElementById('bg-sunrise'),
+  beach:document.getElementById('bg-beach'),
+  night:document.getElementById('bg-night')
+};
+function showOnly(id){Object.values(bgEl).forEach(el=>el.classList.remove('show'));id.classList.add('show');}
+
+/* ========== 状態管理 ========== */
+let count=0;
+const counterEl=document.getElementById('counter');
+const toast=document.getElementById('toast');
+
+/* ========== 砂レイヤー（深さマップつき） ========== */
+const sandCanvas=document.getElementById('sandLayer');
+const sctx=sandCanvas.getContext('2d',{willReadFrequently:true});
+const TILE_SIZE=80; // 深さ判定の1タイルの大きさ
+let depthMap={},brushCount={},shellsOnField=[];
+const SAND={brush:26,spawnProb:0.25,maxShells:10};
+
+function viewportWH(){return {vw:window.innerWidth,vh:window.innerHeight};}
+function resizeSand(){
+  const {vw,vh}=viewportWH();
+  sandCanvas.width=vw; sandCanvas.height=vh;
+  const g=sctx.createLinearGradient(0,0,0,vh);
+  g.addColorStop(0,'#D9C8A6'); g.addColorStop(1,'#CBB890');
+  sctx.fillStyle=g; sctx.fillRect(0,0,vw,vh);
+}
+function initDepthMap(){
+  depthMap={}; brushCount={};
+  const {vw,vh}=viewportWH();
+  const cols=Math.ceil(vw/TILE_SIZE), rows=Math.ceil(vh/TILE_SIZE);
+  for(let c=0;c<cols;c++)for(let r=0;r<rows;r++){
+    const rnd=Math.random(); let d=1;
+    if(rnd>0.5) d=2; if(rnd>0.85) d=3;
+    depthMap[`${c},${r}`]=d; brushCount[`${c},${r}`]=0;
+  }
+}
+function showSand(){sandCanvas.classList.remove('hide');resizeSand();initDepthMap();}
+function hideSand(){sandCanvas.classList.add('hide');shellsOnField.forEach(s=>s.el.remove());shellsOnField=[];}
+
+sandCanvas.addEventListener('pointerdown',e=>{isBrushing=true;brushAt(e);},{passive:false});
+sandCanvas.addEventListener('pointermove',e=>{if(isBrushing)brushAt(e);},{passive:false});
+sandCanvas.addEventListener('pointerup',()=>isBrushing=false);
+sandCanvas.addEventListener('pointercancel',()=>isBrushing=false);
+
+let isBrushing=false;
+function brushAt(e){
+  const rect=sandCanvas.getBoundingClientRect();
+  const x=e.clientX-rect.left, y=e.clientY-rect.top;
+  sctx.globalCompositeOperation='destination-out';
+  sctx.beginPath(); sctx.arc(x,y,SAND.brush,0,Math.PI*2); sctx.fill();
+  sctx.globalCompositeOperation='source-over';
+  const col=Math.floor(x/TILE_SIZE), row=Math.floor(y/TILE_SIZE), key=`${col},${row}`;
+  if(depthMap[key]){
+    brushCount[key]++;
+    if(brushCount[key]>=depthMap[key]){
+      depthMap[key]=Infinity; // 二度と判定しない
+      maybeSpawnShell(x,y);
     }
-    document.querySelectorAll('[data-i18n]').forEach(el=>{
-      el.textContent = t(el.getAttribute('data-i18n'));
-    });
   }
-  const t=k=>I18N.dict[k]||k;
+}
 
-  /* ========== 背景フォールバック付きプリロード ========== */
-  const BG_SOURCES={
-    sunrise:'public/bg/sunrise.jpg',
-    beach:'public/bg/beach_day.jpg',
-    night:'public/bg/night_beach.jpg'
-  };
-  const bgEl={
-    sunrise:document.getElementById('bg-sunrise'),
-    beach:document.getElementById('bg-beach'),
-    night:document.getElementById('bg-night')
-  };
-  function preload(src){return new Promise(resolve=>{
-    const img=new Image(); img.onload=()=>resolve(src); img.onerror=()=>resolve(null); img.src=src+'?v='+Date.now();
-  });}
-  async function setupBackgrounds(){
-    // まず各画像をチェック
-    const ok={
-      sunrise:await preload(BG_SOURCES.sunrise),
-      beach:  await preload(BG_SOURCES.beach),
-      night:  await preload(BG_SOURCES.night)
+/* ========== 貝の出現 & ドラッグ吸い込み ========== */
+const COMMON=["public/items/asari1.png","public/items/asari2.png","public/items/asari3.png"];
+const RARE=["public/items/aurora_shell.png","public/items/flame_shell.png","public/items/luminous_shell.png","public/items/mystic_shell.png","public/items/night_sky_shell.png","public/items/rare_pearl.png","public/items/rare_rainbow.png","public/items/wave_shell.png"];
+const bucket=document.getElementById('bucket');
+
+function maybeSpawnShell(x,y){
+  if(shellsOnField.length>=SAND.maxShells) return;
+  if(Math.random()>SAND.spawnProb) return;
+  // 出現位置をランダムに散らばらせる
+  const spread=80;
+  const randX=x+(Math.random()*2-1)*spread;
+  const randY=y+(Math.random()*2-1)*spread;
+  const vw=window.innerWidth,vh=window.innerHeight;
+  const cx=Math.max(40,Math.min(vw-40,randX));
+  const cy=Math.max(80,Math.min(vh-80,randY));
+  const pool=Math.random()<0.8?COMMON:RARE;
+  const src=pool[Math.floor(Math.random()*pool.length)];
+  const el=document.createElement('img');
+  el.src=src; el.className='shell'; el.style.left=cx+'px'; el.style.top=cy+'px';
+  document.body.appendChild(el);
+  requestAnimationFrame(()=>el.classList.add('show'));
+  enableDrag(el); shellsOnField.push({x:cx,y:cy,el});
+}
+
+function enableDrag(el){
+  let shiftX=0,shiftY=0;
+  el.onpointerdown=e=>{
+    e.preventDefault();
+    el.classList.add('dragging');
+    el.setPointerCapture(e.pointerId);
+    const rect=el.getBoundingClientRect();
+    shiftX=e.clientX-rect.left; shiftY=e.clientY-rect.top;
+    el.onpointermove=ev=>{
+      el.style.left=(ev.clientX-shiftX)+"px";
+      el.style.top =(ev.clientY-shiftY)+"px";
     };
-    // 無いものはビーチ→無ければ何もしない（CSSグラデが出る）
-    if(ok.sunrise) bgEl.sunrise.style.backgroundImage=`url(${ok.sunrise})`;
-    else if(ok.beach) bgEl.sunrise.style.backgroundImage=`url(${ok.beach})`;
-
-    if(ok.beach) bgEl.beach.style.backgroundImage=`url(${ok.beach})`;
-
-    if(ok.night) bgEl.night.style.backgroundImage=`url(${ok.night})`;
-    else if(ok.beach) bgEl.night.style.backgroundImage=`url(${ok.beach})`;
-  }
-
-  /* ========== トースト & シーン切替 ========== */
-  const toast=document.getElementById('toast');
-  const moon=document.getElementById('moon');
-  function showToastKey(key){ toast.textContent = t(key); }
-
-  function showOnly(id){
-    Object.values(bgEl).forEach(el=>el.classList.remove('show'));
-    id.classList.add('show');
-  }
-
-  function setScene(name){
-    document.body.classList.toggle('night-on', name==='night');
-    // 片付け
-    shellsOnField.forEach(s=>s.el.remove()); shellsOnField=[];
-    // 表示
-    if(name==='sunrise'){ showOnly(bgEl.sunrise); hideSand(); showToastKey('toast.sunrise'); }
-    if(name==='beach'){   showOnly(bgEl.beach);   showSand();  showToastKey('toast.beach'); }
-    if(name==='night'){   showOnly(bgEl.night);   hideSand();  showToastKey('toast.night'); }
-  }
-
-  /* ========== 砂よけ & ドラッグ吸い込み ========== */
-  const sandCanvas=document.getElementById('sandLayer');
-  const sctx=sandCanvas.getContext('2d',{willReadFrequently:true});
-  const SAND={brush:26,spawnProb:0.22,maxShells:6};
-  let isBrushing=false; let shellsOnField=[];
-  function viewportWH(){
-    const vw = window.visualViewport ? visualViewport.width  : document.documentElement.clientWidth;
-    const vh = window.visualViewport ? visualViewport.height : document.documentElement.clientHeight;
-    return {vw:Math.floor(vw),vh:Math.floor(vh)};
-  }
-  function resizeSand(){
-    const {vw,vh}=viewportWH();
-    sandCanvas.width=vw; sandCanvas.height=vh;
-    const g=sctx.createLinearGradient(0,0,0,vh); g.addColorStop(0,'#D9C8A6'); g.addColorStop(1,'#CBB890');
-    sctx.fillStyle=g; sctx.fillRect(0,0,vw,vh);
-  }
-  function showSand(){ sandCanvas.classList.remove('hide'); resizeSand();
-    window.addEventListener('resize',resizeSand); if(window.visualViewport){visualViewport.addEventListener('resize',resizeSand); visualViewport.addEventListener('scroll',resizeSand);}
-  }
-  function hideSand(){ sandCanvas.classList.add('hide');
-    window.removeEventListener('resize',resizeSand); if(window.visualViewport){visualViewport.removeEventListener('resize',resizeSand); visualViewport.removeEventListener('scroll',resizeSand);}
-  }
-
-  sandCanvas.addEventListener('pointerdown', e=>{e.preventDefault(); isBrushing=true; sandCanvas.setPointerCapture(e.pointerId); brushAt(e);},{passive:false});
-  sandCanvas.addEventListener('pointermove', e=>{ if(!isBrushing) return; e.preventDefault(); brushAt(e); },{passive:false});
-  sandCanvas.addEventListener('pointerup',   e=>{ e.preventDefault(); isBrushing=false; },{passive:false});
-  sandCanvas.addEventListener('pointercancel',e=>{ e.preventDefault(); isBrushing=false; },{passive:false});
-
-  function brushAt(e){
-    const r=sandCanvas.getBoundingClientRect(); const x=e.clientX-r.left; const y=e.clientY-r.top;
-    sctx.globalCompositeOperation='destination-out'; sctx.beginPath(); sctx.arc(x,y,SAND.brush,0,Math.PI*2); sctx.fill(); sctx.globalCompositeOperation='source-over';
-    maybeSpawnShell(x,y);
-  }
-  function maybeSpawnShell(x,y){
-    if(shellsOnField.length>=SAND.maxShells) return;
-    if(Math.random()>SAND.spawnProb) return;
-    const pool=Math.random()<0.8?COMMON:RARE; const src=pool[Math.floor(Math.random()*pool.length)];
-    const el=document.createElement('img'); el.src=src; el.className='shell'; el.style.left=x+'px'; el.style.top=y+'px';
-    document.body.appendChild(el); requestAnimationFrame(()=>el.classList.add('show'));
-    enableDrag(el); shellsOnField.push({x,y,el});
-  }
-
-  /* ドラッグでバケツに吸い込む */
-  const bucket=document.getElementById('bucket'); const counterEl=document.getElementById('counter'); let count=0;
-  function enableDrag(el){
-    let offX=0,offY=0;
-    el.onpointerdown=e=>{
-      el.classList.add('dragging'); el.setPointerCapture(e.pointerId); offX=e.offsetX; offY=e.offsetY;
-      el.onpointermove=ev=>{ el.style.left=(ev.clientX-offX)+'px'; el.style.top=(ev.clientY-offY)+'px'; };
-      el.onpointerup=ev=>{
-        el.classList.remove('dragging'); el.onpointermove=null;
-        const b=bucket.getBoundingClientRect(); const s=el.getBoundingClientRect();
-        const overlap = !(s.right<b.left || s.left>b.right || s.bottom<b.top || s.top>b.bottom);
-        if(overlap){ el.remove(); count++; counterEl.textContent=count; }
-      };
+    el.onpointerup=ev=>{
+      el.classList.remove('dragging');
+      el.onpointermove=null; el.releasePointerCapture(e.pointerId);
+      const b=bucket.getBoundingClientRect(), s=el.getBoundingClientRect();
+      const overlap=!(s.right<b.left||s.left>b.right||s.bottom<b.top||s.top>b.bottom);
+      if(overlap){el.remove();count++;counterEl.textContent=count;}
     };
-  }
+  };
+}
 
-  /* ========== データ ========== */
-  const COMMON=["public/items/asari1.png","public/items/asari2.png","public/items/asari3.png"];
-  const RARE=["public/items/aurora_shell.png","public/items/flame_shell.png","public/items/luminous_shell.png","public/items/mystic_shell.png","public/items/night_sky_shell.png","public/items/rare_pearl.png","public/items/rare_rainbow.png","public/items/wave_shell.png"];
+/* ========== シーン切替 ========== */
+function setScene(name){
+  Object.values(bgEl).forEach(el=>el.classList.remove('show'));
+  shellsOnField.forEach(s=>s.el.remove()); shellsOnField=[];
+  if(name==='sunrise'){showOnly(bgEl.sunrise);hideSand();toast.textContent="おはよう";}
+  if(name==='beach'){showOnly(bgEl.beach);showSand();toast.textContent="砂をなでてみよう";}
+  if(name==='night'){showOnly(bgEl.night);hideSand();toast.textContent="今日はここまで";}
+}
 
-  /* ========== ボタン ========== */
-  document.getElementById('btnStart').onclick=()=>setScene('beach'); // ←必ず砂浜へ
-  document.getElementById('btnNight').onclick=()=>setScene('night');
-  document.getElementById('btnCook').onclick =()=>alert('料理は後で実装');
-  document.getElementById('btnAcc').onclick  =()=>alert('アクセサリーは後で実装');
-  document.getElementById('btnCol').onclick  =()=>alert('コレクションは後で実装');
-  document.getElementById('langSel').onchange=e=>setLang(e.target.value);
+/* ========== ボタン ========== */
+document.getElementById('btnStart').onclick=()=>setScene('beach');
+document.getElementById('btnNight').onclick=()=>setScene('night');
 
-  /* ========== 初期化 ========== */
-  (async()=>{
-    await setLang('ja');
-    await setupBackgrounds();  // 画像が無くてもグラデで表示
-    // 朝焼けから開始
-    Object.values(bgEl).forEach(el=>el.classList.remove('show'));
-    bgEl.sunrise.classList.add('show');
-    showToastKey('toast.sunrise');
-  })();
-  </script>
+/* 初期表示 */
+setScene('sunrise');
+</script>
 </body>
 </html>
